syntax = "proto3";
import "base.proto";
option go_package = "./;proto";

service UserFav{
    rpc GetFavList(UserFavRequest) returns(UserFavListResponse); //过滤收藏信息
    rpc AddUserFav(UserFavRequest) returns(Empty); //添加留言
    rpc DeleteUserFav(UserFavRequest) returns(Empty); //删除留言
    rpc GetUserFavDetail(UserFavRequest) returns(Empty); //删除留言
}

message UserFavRequest{
    uint32 userId = 1;
    uint64 goodsId = 2;
}
message UserFavResponse{
    uint32 userId = 1;
    uint64 goodsId = 2;
}

message UserFavListResponse {
    int32 total = 1;
    repeated UserFavResponse data = 2;
}
